sysdeps/unix/sysv/linux/getsysstats.c
@@ -30,7 +30,7 @@
 #include <sys/sysinfo.h>
 #include <sysdep.h>
 
-int
+static int
 __get_nprocs_sched (void)
 {
   enum
